--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,13 +1,17 @@
 
 .lightTheme{
     --bg:#ffffff;
+    --bgimg:url(../../public/assets/bgim2.jpg);
     --navlink:rgb(0, 0, 0);
     --navlinkhover:rgba(0, 0, 0, 0.831);
     background-color: #FFFFFF;
     --imgshadow:rgba(179, 236, 240, 0.504);
     --textcolor:#1C1E21;
-    --projectborder:#1c1e212f;
     --bgshadow:rgba(0, 0, 0, 0.589);
+    --gradient1:#000000;
+    --gradient2:#000000;
+    --gradient3:#000000;
+     
 
 }
 .darkTheme{
@@ -17,15 +21,19 @@
     --navlinkhover:rgb(255, 255, 255);
     background-color: #1B1B1D;
     --textcolor:#E3E3E3;
-    --projectborder:#e3e3e32d;
     --bgshadow:rgba(73, 73, 73, 0.484);
+    --gradient1:#da3cb7;
+    --gradient2:#33e1ff;
+    --gradient3:#c7009b;
+
+   
 }
+
+
 
 .navbarbg{
     background-image: var(--bgimg);
-    background-color: var(--bg);
 }
-
 
 .new{
  color: var(--textcolor);
@@ -35,8 +43,163 @@
  background-image: var(--bgimg);
     
 }
-
+.devname{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    color: var(--textcolor);
+    cursor: pointer;
+    
+}
 
 .navlink{
     color: var(--navlink);
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.navlink:hover {
+    color: var(--navlinkhover);
+  }
+
+.maincontainer{
+    padding-top:100px;
+    height: 100vh;
+}
+
+.wave {
+    animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+    animation-duration: 2.1s; /* Change to speed up or slow down */
+    animation-iteration-count: infinite; /* Never stop waving :) */
+    transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+    display: inline-block;
+  }
+  
+  @keyframes wave-animation {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(14deg);
+    }
+    20% {
+      transform: rotate(-8deg);
+    }
+    30% {
+      transform: rotate(14deg);
+    }
+    40% {
+      transform: rotate(-4deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    60% {
+      transform: rotate(0deg);
+    } 
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+
+  .leftfirsthead{
+    font-weight: 500;
+    font-size:  2.4em ;
+    color: var(--textcolor);
+    
+  }
+  .leftsecondhead{
+    font-weight: 600;
+    font-size: 2.5em;
+    color: var(--textcolor);
+  }
+  .main-name {
+    color: var(--textcolor);
+  }
+
+  .left-header{
+    padding-top: 120px;
+    /* height: 100vh; */
+  }
+
+  /* .welcomtext{
+    font-weight: 700;
+    font-size: 1.9rem;
+    font-family:Arial, Helvetica, sans-serif;
+    overflow: hidden;
+    min-height: 3rem;
+    color: transparent;
+    background-clip: text;
+    animation: animateBorder 2s infinite;
+    background-image: linear-gradient(to right, var(--gradient1), var(--gradient2), var(--gradient3)); 
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
+    @keyframes animateBorder {
+      0% {
+        background-position: 0 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0 50%;
+      }
+    }
+  
+} */
+
+/* 
+.welcomtext {
+  font-weight: 700;
+  font-size: 1.9rem;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  min-height: 3rem;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(to right, var(--gradient1), var(--gradient2), var(--gradient3)); 
+  animation: animateBorder 2s infinite;
+}
+
+@keyframes animateBorder {
+  0% {
+      background-position: 0 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0 50%;
+  }
+} */
+
+
+.welcomtext {
+  background: linear-gradient(
+      to right,
+    var(--gradient1), var(--gradient2), var(--gradient3)
+      /* #764ada 80% */
+  );
+  /* font-size: 30; */
+  -webkit-background-clip: text;
+  font-weight: 900;
+  font-size: 1.9rem;
+  font-family:Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 2s ease-in-out infinite alternate;
+}
+
+@keyframes textShine {
+  0% {
+      background-position: 0% 50%;
+  }
+  100% {
+      background-position: 100% 50%;
+  }
 }
