--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -12,8 +12,7 @@
     --gradient2:#000000;
     --gradient3:#000000;
     --iconcolor:#E3E3E3;
-     
-
+    --sectionhead:blue;
 }
 .darkTheme{
     --bg:#242526;
@@ -26,7 +25,8 @@
     --gradient1:#da3cb7;
     --gradient2:#33e1ff;
     --gradient3:#c7009b;
-    --iconcolor:#1C1E21;
+    --iconcolor:#1C1E21; 
+    --sectionhead:#F0DB4F;  
 }
 
 
@@ -53,7 +53,6 @@
     overflow: hidden;
     background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-fill-color: transparent;
   background-size: 500% auto;
   animation: textShine 2s ease-in-out infinite alternate;
 }
@@ -103,6 +102,7 @@
 
 
 
+
 .wave {
     animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
     animation-duration: 2.1s; /* Change to speed up or slow down */
@@ -139,13 +139,15 @@
   }
 
   .leftfirsthead{
-    font-weight: 500;
+    font-weight: 700;
     font-size:  2.4em ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--textcolor);
     
   }
   .leftsecondhead{
     font-weight: 600;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 2.5em;
     color: var(--textcolor);
   }
@@ -156,9 +158,75 @@
   .left-header{
     padding-top: 120px;
     height: 100%;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
+  .proicons{
+   justify-content: start;
+  }
+
+  @media only screen and (max-width: 768px) {
+   
+    .left-header {
+      padding-top: 50px; 
+    }
+
+    .leftfirsthead{
+      text-align: center;
+    }
+    .leftsecondhead{
+      text-align: center;
+    }
+    .welcomtext{
+      text-align: center;
+    }
+    .description{
+      text-align: center;
+      max-width: 100%;
+    }
+    .proicons{
+      justify-content: center;
+    }
+    .resumebtn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .aboutdiv{
+  text-align: center;
+    }
+   
+  }
+  @media only screen and (max-width: 640) {
+    .left-header {
+      padding-top: 50px; 
+    }
+    
+    .leftfirsthead{
+      text-align: center;
+    }
+    .leftsecondhead{
+      text-align: center;
+    }
+    .welcomtext{
+      text-align: center;
+    }
+    .description{
+      text-align: center;
+      max-width: 100%;
+    }
+    .proicons{
+      justify-content: center;
+    }
+    .resumebtn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .aboutdiv{
+      text-align: center;
+        }
   }
 
  .welcomtext{
@@ -201,11 +269,15 @@
 } 
 .dpimg:hover {
   transform: scale(1.01); 
+transition-duration: 0.8s;
 }
 
+.dpimg:not(:hover) {
+  transition-duration: 0.8s; 
+}
 @keyframes shadow-animation {
   0% {
-    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.9);
+    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 1.0);
   }
   100% {
     box-shadow: 0 0 15px 2px rgba(255, 255, 255, 0.5);
@@ -445,3 +517,49 @@
 /* ::-webkit-scrollbar-thumb:hover {
   background: var(--iconcolor); 
 } */
+
+.navheads{
+  
+  font-weight: 800;
+  font-size: 1.1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.aboutpara{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.0rem;
+  color: var(--textcolor);
+}
+
+
+.categoryactive{
+  color: var(--textcolor);
+  background-color: rgb(20, 126, 251);
+}
+.categorynonactive{
+  border: 1px solid;
+  border-color:  var(--textcolor);
+
+}
+
+.aboutcategoryhead{
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 0.9em;
+  color: var(--textcolor);
+}
+
+.aboutrole{
+  color: blue;
+  font-weight: 400;
+  font-size: 0.8em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.aboutcontent{
+  font-weight: 400;
+  font-size: 0.9em;
+  color: var(--textcolor);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
