--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -409,7 +409,7 @@ transition-duration: 0.8s;
 
 
 .aboutrole{
-  color: rgba(0, 0, 255, 0.732);
+  color: #147efb;
   font-weight: 400;
   font-size: 0.8em;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -429,10 +429,35 @@ transition-duration: 0.8s;
   object-fit: fill;
   transition: ease 0.5s;
   filter: brightness(75%);
-  box-shadow: 0 6px 8px var(--textcolor);
+  box-shadow: 0 2px 10px var(--textcolor);
 }
 
 .aboutimg:hover{
   box-shadow: 0 8px 16px var(--textcolor);
 }
+
+.techcontainer{
+  color: var(--textcolor);
+}
+
+.portfoliohead{
+  color: #147efb;
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: "Rubik Scribble", system-ui;
+}
+
+.techstackpara{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.0rem;
+  color: var(--textcolor);
+}
+
+.techcard {
+  background-color: transparent;
+  border: 1px solid #ccc; 
+  border-radius: 10%;
+}
+
 
