--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -44,6 +44,30 @@
   --scrolltotoproot:#147efb;
 }
 
+/*  Preloader */
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background-color: #fff;
+  background-image: url(../../public/assets/pre.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: all ease-in-out 3s;
+}
+
+#preloader-none {
+  opacity: 0;
+}
+
+#no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
 
 .navbarbg {
   background-image: var(--bgimg);
@@ -102,7 +126,7 @@
 }
 
 .maincontainer {
-  height: 100%;
+  height: 100vh;
 }
 
 
@@ -286,7 +310,7 @@
 
 .rightimg {
   width: 100%;
-  padding-top: 110px;
+  /* padding-top: 110px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -479,10 +503,6 @@
   font-family: "Rubik Scribble", system-ui;
 }
 
-.rounded-left-right {
-  border-radius: 30px;
-}
-
 .techstackpara {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 1.0rem;
@@ -596,7 +616,6 @@
 }
 
 .Projectdate {
-  /* font-size: 12px; */
   font-size: 0.8rem;
   font-weight: 400;
   color: var(--textcolor); 
@@ -628,7 +647,7 @@
   }
 
   .projecttags {
-    justify-content: flex-start; 
+    justify-content: center; 
   }
 
   .projecttag {
@@ -651,7 +670,7 @@
   }
 
   .Projectdescription {
-    -webkit-line-clamp: 3; 
+    -webkit-line-clamp: 4; 
     font-size: 0.6rem;
   }
 }
