--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -191,22 +191,12 @@
   color: var(--textcolor);
 }
 
-.left-header {
-  padding-top: 120px;
-  height: 100%;
-  flex-direction: column;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 
 .proicons {
   justify-content: start;
 }
 
 @media only screen and (max-width: 768px) {
-
-  .left-header {
-    padding-top: 50px;
-  }
 
   .leftfirsthead {
     text-align: center;
@@ -249,13 +239,9 @@
     justify-content: start;
   }
 
-
 }
 
 @media only screen and (max-width: 640) {
-  .left-header {
-    padding-top: 50px;
-  }
 
   .leftfirsthead {
     text-align: center;
@@ -314,6 +300,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 
@@ -844,3 +831,53 @@
     font-size: 14px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
