--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -100,8 +100,8 @@
 
 .description {
   color: #757575fe;
-  font-size: clamp(12px, 3vw, 16px);
-  font-family: cursive;
+  font-size: clamp(12px, 3vw, 18px);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-style: italic;
   max-width: 80%;
 }
